--- a/HelloNeighbor/results/Plotter.ipynb
+++ b/HelloNeighbor/results/Plotter.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-30T09:56:17.929911Z",
-     "start_time": "2025-04-30T09:56:17.790902Z"
+     "end_time": "2025-05-01T10:10:53.024936Z",
+     "start_time": "2025-05-01T10:10:52.602262Z"
     }
    },
    "source": [
@@ -25,7 +25,7 @@
     "from jedi.api import file_name\n",
     "\n",
     "# folder_names = [\"experiment_test1\"]\n",
-    "number_of_experiments = 10\n",
+    "number_of_experiments = 40\n",
     "number_of_robots = 20\n",
     "#In this context, an experiment refers to a set of 10 (subject to change) runs of the simulation with that config\n",
     "\n",
@@ -51,8 +51,9 @@
     "            df = pd.read_csv(path_to_robot, sep=\" \")\n",
     "            if \"Estimate\" in df.columns:\n",
     "                #Need to filp it, have the actual percentages as the col names\n",
-    "                last_estimate = df[\"Estimate\"].iloc[-1]\n",
-    "                difference = 100 * (abs(last_estimate - 0.75))\n",
+    "                # last_estimate = df[\"Estimate\"].iloc[-1]\n",
+    "                # difference = 100 * (abs(last_estimate - 0.75))\n",
+    "                difference = df[\"TIMESTAMP\"].iloc[-1]\n",
     "                estimate_list.append(difference)\n",
     "\n",
     "                # new_row = pd.DataFrame([[folder_name, last_estimate]], columns=estimate_df.columns)\n",
@@ -67,7 +68,7 @@
     "# folder_names = [\"1\"]\n",
     "\n",
     "\n",
-    "get_estimates_from_experiment(folder_names, number_of_experiments, number_of_robots, \"byzantine_binary\",\"collected_results/byzantine_binary/byzantine_binary_\")"
+    "get_estimates_from_experiment(folder_names, number_of_experiments, number_of_robots, \"Consensus_time_byzantine\",\"collected_results/byzantine_03_40/byzantine_03_40_\")"
    ],
    "outputs": [
     {
@@ -85,31 +86,50 @@
       "7  2.928947\n",
       "1.780535\n",
       "/home/zak-22/arg/toychain-argos/HelloNeighbor/results\n",
-      "           1          2          3          4          5          6  \\\n",
-      "0  25.000000  22.955333  22.944479  17.950667   5.002222   6.555000   \n",
-      "1  25.000000  14.883500  22.957436  21.332727   6.985556   5.038833   \n",
-      "2  22.690476  23.599778  24.805833  18.853452   0.000000   5.000000   \n",
-      "3  22.282308  23.293810  22.407500  24.318444   8.319167   5.000000   \n",
-      "4  21.798750  25.000000  19.095238  21.426301   5.555000   6.591111   \n",
-      "5  23.481333  21.623846  25.000000   8.457083  25.638958  18.427134   \n",
-      "6  22.435897  25.000000  21.309286  19.014176  15.780000   9.224833   \n",
-      "7  24.412857  20.675556  24.461538  17.063788   3.000000  15.000000   \n",
-      "8  22.333810  23.141111  22.411000  24.544333  16.007222   0.421296   \n",
-      "\n",
-      "           7          8  \n",
-      "0  17.556667  18.924815  \n",
-      "1  13.110000  24.111111  \n",
-      "2   5.443704   5.814630  \n",
-      "3  14.360833  25.074444  \n",
-      "4  26.278333  12.719481  \n",
-      "5  34.610833  31.593333  \n",
-      "6   9.445556   0.666667  \n",
-      "7  13.110000   7.886667  \n",
-      "8  14.963333  11.037778  \n"
+      "       1     2     3     4     5     6     7     8\n",
+      "0    801   801   801   801  1401  1101  1401  1401\n",
+      "1    801   801   801   801  1101  1101  1101   801\n",
+      "2    801   501   801   801  1101  1101  1101  1401\n",
+      "3    501   801   801   801   801  1101  1401  1101\n",
+      "4    801   801   801   801  1101  1101  1101  1401\n",
+      "5    801   501  1101  1101  1101   801   801  1101\n",
+      "6    801  1101   801   801   801  1401   801  1401\n",
+      "7    801   801   801   801   801  1401  1401  1401\n",
+      "8    801   501   801   801   801  1101  1101  1701\n",
+      "9    801   801   801   801   801   801   801  1101\n",
+      "10  1101   801   801   801   801  1101   801  1101\n",
+      "11   801   801   801   801   201  1101  1401  1401\n",
+      "12   501   801   801  1101   801  1101  1101  1701\n",
+      "13   801   501   801   801  1101   801   801  1101\n",
+      "14   801  1101   801   801  1101   801  1401   801\n",
+      "15   801   801   801  1101   801  1101  1101  1701\n",
+      "16   801   801   801   801   801   801  1401   801\n",
+      "17   501  1101   801  1101   801  1101  1401  1401\n",
+      "18   801   801   801  1101  1101  1101  1401   801\n",
+      "19   801   801   801   801   801   801  1401  1101\n",
+      "20   801   801  1101   801  1101   801  1101  1101\n",
+      "21   801  1101   501   801   801   801   801  1101\n",
+      "22   501   801   801   801   801  1101  1101  1101\n",
+      "23  1101   801   801  1101   801  1101  1401   801\n",
+      "24   501   801  1101  1101   801  1101   801  1401\n",
+      "25   801   801   501   801   801   801  1101  1101\n",
+      "26   801   801  1101   801  1101  1101  1101  1101\n",
+      "27   801  1101  1101   801  1101   801  1101  1101\n",
+      "28   501   801   801   801   801   801  1401  1401\n",
+      "29   801   801   801   801   801   801  1101  1401\n",
+      "30   501   801   801   801   801  1101   201  1101\n",
+      "31  1101   801   801   801   801   801  1101  1101\n",
+      "32   501  1101   801  1101  1101   801   801  1101\n",
+      "33  1101   501   801  1101  1101   801  1101  1101\n",
+      "34   801   501   801   801   801  1101  1101   801\n",
+      "35   501   801   801   801   801   801   801  1101\n",
+      "36  1101   501   801  1101   801   801  1401   801\n",
+      "37   801   801   501   801  1101  1101  1401  1401\n",
+      "38   801   801  1101  1401   801   801  1401  1401\n"
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 34
   },
   {
    "metadata": {},
